--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,16 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Kevin Campuzano's Blog
-email: your-email@example.com
+email: kcampuzanocastillo@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Software developer with experience in banking apps, native Android and iOS development.
+  Father of 2, enjoy swimming, reading books of all genres, and cooking. I share my
+  experiences and insights about software development, mobile apps, and life as a dev.
 baseurl: '' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Kevincamp
 github_username: Kevincamp
+medium_username: kevincamp90
 
 # Build settings
 theme: minima
